[gd_scene load_steps=10 format=2]

[ext_resource path="res://sprites/octopus.png" type="Texture" id=1]
[ext_resource path="res://scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://scenes/HealthBar.tscn" type="PackedScene" id=3]
[ext_resource path="res://fonts/Outward_Bound.ttf" type="DynamicFontData" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 4.12311

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=4]
resource_name = "hit"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="DynamicFont" id=2]
size = 7
extra_spacing_top = -2
font_data = ExtResource( 4 )

[sub_resource type="CircleShape2D" id=5]
radius = 20.8806

[node name="Player" type="Area2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.819608, 0.74902, 0.690196, 1 )
z_index = -1
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 3 )
anims/hit = SubResource( 4 )

[node name="HUD" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -24.0
margin_right = 20.0
margin_bottom = 40.0
mouse_filter = 2

[node name="Stats" type="VBoxContainer" parent="HUD"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -11.0
mouse_filter = 2
size_flags_vertical = 9
custom_constants/separation = 0
alignment = 2

[node name="HealthBar" parent="HUD/Stats" instance=ExtResource( 3 )]
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 0.0
margin_right = 40.0
margin_bottom = 6.0

[node name="Mana" type="HBoxContainer" parent="HUD/Stats"]
margin_top = 6.0
margin_right = 40.0
margin_bottom = 18.0
mouse_filter = 2
size_flags_horizontal = 3
alignment = 1

[node name="ManaLabel" type="Label" parent="HUD/Stats/Mana"]
margin_left = 16.0
margin_right = 24.0
margin_bottom = 12.0
size_flags_vertical = 1
custom_colors/font_color = Color( 0.478431, 0.611765, 0.588235, 1 )
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1

[node name="Collector" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Collector"]
shape = SubResource( 5 )

[connection signal="area_entered" from="." to="." method="_on_Player_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_Player_area_exited"]
[connection signal="area_entered" from="Collector" to="." method="_on_Player_area_entered"]
